--- a/vila/index.html
+++ b/vila/index.html
@@ -79,7 +79,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
     
     <div class="header-container mt-3 mb-3 mt-lg-2 mb-lg-2">
         <div class="header-logo">
-            <a href="https://casa.local/" rel="home">
+            <a href="/" rel="home">
         <img src="./index_files/casa_del_lago_logo_svg.svg" alt="English">
     </a>
         </div>
