--- a/index.html
+++ b/index.html
@@ -118,15 +118,24 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
       <main id="main" class="main">
                                                         <section id="hero-section" class="banner-pillar in-page-section position-relative vh-100">
-                    <img src="./index_files/1-1.jpg" alt="home banner" class="position-absolute top-0 start-0 w-100 vh-100 object-fit-cover">
+                    <img src="./index_files/1-1.jpg" alt="home banner" class="position-absolute top-0 start-0 w-100 vh-100 object-fit-cover" id="hero-background">
         
-                    <video style="width: 100vw; height: 100vh; object-fit: cover;" id="hero-video" class="video-bg" playsinline="" muted="" autoplay="" loop="">
+                    <video style="width: 100vw; height: 100vh; object-fit: cover;" id="hero-video" class="video-bg" playsinline="" muted="" autoplay="" loop="" onplay="hideBackgroundImage()">
                 <source src="https://webdevbytes.com/casa-del-lago-site/video/casa.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         
         <h1 class="text-white mb-3 mb-lg-4 position-absolute" style="bottom: 10%; right: 10%; z-index: 9999;"><span style="margin-right: 120px;">Your Oasis</span><br class="desktop-break">in the City</h1>
     </section>
+
+    <script>
+        function hideBackgroundImage() {
+            var backgroundImage = document.getElementById('hero-background');
+            if (backgroundImage) {
+                backgroundImage.style.display = 'none';
+            }
+        }
+    </script>
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             <section id="header-2" class="block block-header-subtext py-5 white-bg">
         <div class="container">
             <div class="row">
