--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                 Your browser does not support the video tag.
             </video>
         
-        <h1 class="text-white mb-3 mb-lg-4 position-absolute" style="bottom: 10%; right: 10%; z-index: 9999;"><span style="margin-right: 120px;">Your Oasis</span><br class="desktop-break">in the City</h1>
+        <h1 class="text-white mb-3 mb-lg-4 position-absolute" style="bottom: 10%; right: 10%; z-index: 9999;"><span >Your Oasis</span><br class="desktop-break">in the City</h1>
     </section>
 
     <script>
