--- a/apartamente/index.html
+++ b/apartamente/index.html
@@ -17340,7 +17340,7 @@ form#filter input[type=radio]:checked label {
 <li id="menu-item-698" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-698"><a href="https://stingray-app-noier.ondigitalocean.app/vila/">Vila</a></li>
 <li id="menu-item-699" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-699"><a href="https://stingray-app-noier.ondigitalocean.app/apartamente/">Apartamente</a></li>
 <li id="menu-item-713" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-713"><a href="https://stingray-app-noier.ondigitalocean.app/rreth-nesh/">Rreth Nesh</a></li>
-<li id="menu-item-714" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-714"><a href="https://casa.local/apartamente/#">Atraksione</a></li>
+<li id="menu-item-714" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-714"><a href="https://stingray-app-noier.ondigitalocean.app/atraksione/">Atraksione</a></li>
 <li id="menu-item-715" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-715"><a href="https://casa.local/apartamente/#">Eksploro dhe Rezervo</a></li>
 <li id="menu-item-712" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-712"><a href="https://casa.local/apartamente/#">Kontakt</a></li>
 </ul></div>
