--- a/vila/index.html
+++ b/vila/index.html
@@ -17340,7 +17340,7 @@ form#filter input[type=radio]:checked label {
 <li id="menu-item-698" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-698"><a href="https://stingray-app-noier.ondigitalocean.app/vila/">Vila</a></li>
 <li id="menu-item-699" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-699"><a href="https://stingray-app-noier.ondigitalocean.app/apartamente/">Apartamente</a></li>
 <li id="menu-item-713" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-713"><a href="https://stingray-app-noier.ondigitalocean.app/rreth-nesh/">Rreth Nesh</a></li>
-<li id="menu-item-714" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-714"><a href="https://casa.local/vila/#">Atraksione</a></li>
+<li id="menu-item-714" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-714"><a href="https://stingray-app-noier.ondigitalocean.app/atraksione/">Atraksione</a></li>
 <li id="menu-item-715" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-715"><a href="https://casa.local/vila/#">Eksploro dhe Rezervo</a></li>
 <li id="menu-item-712" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-712"><a href="https://casa.local/vila/#">Kontakt</a></li>
 </ul></div>
@@ -17380,7 +17380,7 @@ form#filter input[type=radio]:checked label {
         
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause="false">
                 <div class="carousel-inner">
-                                                                    <div class="carousel-item" data-bs-interval="2000">
+                                                                    <div class="carousel-item active" data-bs-interval="2000">
                             <img src="./index_files/VILA-C_d3.jpg" class="d-block w-100 vh-100 object-fit-cover" alt="Slide Image">
                         </div>
                                                                     <div class="carousel-item" data-bs-interval="2000">
@@ -17395,7 +17395,7 @@ form#filter input[type=radio]:checked label {
                                                                     <div class="carousel-item" data-bs-interval="2000">
                             <img src="./index_files/Screenshot-2024-06-12-at-09.19.30.png" class="d-block w-100 vh-100 object-fit-cover" alt="Slide Image">
                         </div>
-                                                                    <div class="carousel-item active" data-bs-interval="2000">
+                                                                    <div class="carousel-item" data-bs-interval="2000">
                             <img src="./index_files/Screenshot-2024-06-12-at-08.39.23.png" class="d-block w-100 vh-100 object-fit-cover" alt="Slide Image">
                         </div>
                                     </div>
