--- a/index.html
+++ b/index.html
@@ -17376,7 +17376,7 @@ form#filter input[type=radio]:checked label {
 <li id="menu-item-713" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-713"><a href="https://stingray-app-noier.ondigitalocean.app/rreth-nesh/">Rreth Nesh</a></li>
 <li id="menu-item-714" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-714"><a href="https://stingray-app-noier.ondigitalocean.app/atraksione/">Atraksione</a></li>
 <li id="menu-item-715" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-715"><a href="https://casa.local/#">Eksploro dhe Rezervo</a></li>
-<li id="menu-item-712" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-712"><a href="https://casa.local/#">Kontakt</a></li>
+<li id="menu-item-712" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-712"><a href="https://casa.local/#form">Kontakt</a></li>
 </ul></div>
                 </nav>
             
@@ -17579,7 +17579,7 @@ moderne në një nga zonat më të luksoze të Tiranës. Bashkohuni me oazin!</p
                                                 </div>
         </div>
     </section>
-                                                                                                                                                                                                                                                                                    <section class="block block-form py-0 in-page-section py-5 d-flex justify-content-center align-items-center" id="form-9" style="background-color: #81755f;">
+                                                                                                                                                                                                                                                                                    <section class="block block-form py-0 in-page-section py-5 d-flex justify-content-center align-items-center" id="form" style="background-color: #81755f;">
         <div class="container-fluid">
             <div class="row justify-content-center align-items-center">
                 <!-- Left Column -->
