--- a/vila/index.html
+++ b/vila/index.html
@@ -17374,7 +17374,7 @@ form#filter input[type=radio]:checked label {
 <li id="menu-item-713" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-713"><a href="https://stingray-app-noier.ondigitalocean.app/rreth-nesh/">Rreth Nesh</a></li>
 <li id="menu-item-714" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-714"><a href="https://stingray-app-noier.ondigitalocean.app/atraksione/">Atraksione</a></li>
 <li id="menu-item-715" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-715"><a href="https://casa.local/vila/#">Eksploro dhe Rezervo</a></li>
-<li id="menu-item-712" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-712"><a href="https://casa.local/vila/#">Kontakt</a></li>
+<li id="menu-item-712" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-712"><a href="https://casa.local/vila/#form">Kontakt</a></li>
 </ul></div>
                 </nav>
             
@@ -17412,7 +17412,7 @@ form#filter input[type=radio]:checked label {
         
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause="false">
                 <div class="carousel-inner">
-                                                                    <div class="carousel-item carousel-item-next carousel-item-start" data-bs-interval="2000">
+                                                                    <div class="carousel-item" data-bs-interval="2000">
                             <img src="./index_files/VILA-C_d3.jpg" class="d-block w-100 vh-100 object-fit-cover" alt="Slide Image">
                         </div>
                                                                     <div class="carousel-item" data-bs-interval="2000">
@@ -17427,7 +17427,7 @@ form#filter input[type=radio]:checked label {
                                                                     <div class="carousel-item" data-bs-interval="2000">
                             <img src="./index_files/Screenshot-2024-06-12-at-09.19.30.png" class="d-block w-100 vh-100 object-fit-cover" alt="Slide Image">
                         </div>
-                                                                    <div class="carousel-item active carousel-item-start" data-bs-interval="2000">
+                                                                    <div class="carousel-item active" data-bs-interval="2000">
                             <img src="./index_files/Screenshot-2024-06-12-at-08.39.23.png" class="d-block w-100 vh-100 object-fit-cover" alt="Slide Image">
                         </div>
                                     </div>
@@ -17604,7 +17604,7 @@ dhe ka kontakt me dritën në pjesën ballore të liqenit.</div>
             }
         }
     </script>
-                                                                                                                                                                                                                                                                                                                                                                                                    <section class="block block-form py-0 in-page-section py-5 d-flex justify-content-center align-items-center" id="form-8" style="background-color: #81755f;">
+                                                                                                                                                                                                                                                                                                                                                                                                    <section class="block block-form py-0 in-page-section py-5 d-flex justify-content-center align-items-center" id="form" style="background-color: #81755f;">
         <div class="container-fluid">
             <div class="row justify-content-center align-items-center">
                 <!-- Left Column -->
@@ -17632,8 +17632,8 @@ dhe ka kontakt me dritën në pjesën ballore të liqenit.</div>
 <input type="hidden" name="_wpcf7_container_post" value="670">
 <input type="hidden" name="_wpcf7_posted_data_hash" value="">
 </div>
-<div class="container">
-	<div class="row">
+<div class="container-lg justify-content-center">
+	<div class="row justify-content-center">
 		<div class="col-md-6">
 			<p><label for="your-name">Emri</label><br>
 <span class="wpcf7-form-control-wrap" data-name="your-name"><input size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required form-control" id="your-name" aria-required="true" aria-invalid="false" placeholder="Emri" value="" type="text" name="your-name"></span>
