--- a/vila/index.html
+++ b/vila/index.html
@@ -17374,7 +17374,7 @@ form#filter input[type=radio]:checked label {
 <li id="menu-item-713" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-713"><a href="https://stingray-app-noier.ondigitalocean.app/rreth-nesh/">Rreth Nesh</a></li>
 <li id="menu-item-714" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-714"><a href="https://stingray-app-noier.ondigitalocean.app/atraksione/">Atraksione</a></li>
 <li id="menu-item-715" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-715"><a href="https://casa.local/vila/#">Eksploro dhe Rezervo</a></li>
-<li id="menu-item-712" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-712"><a href="https://casa.local/vila/#form">Kontakt</a></li>
+<li id="menu-item-712" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-712"><a href="https://stingray-app-noier.ondigitalocean.app/atraksione/#form">Kontakt</a></li>
 </ul></div>
                 </nav>
             
